# quantmate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_market_data.py  0002_user_strategies.py  0003_backtest_runs.py  0004_quote_snapshots.py  0005_supply_flow_dailies.py  0006_risk_indicator_dailies.py  0007_fundamental_ratios.py  0008_broker_audit_logs.py  0009_strategy_selection_runs.py  0010_extend_fundamental_ratios.py  0011_extend_fundamental_cashflow_dividend.py  0012_fund_current_ratio.py  0013_daily_prices_provider_index.py  0014_data_status_snapshots.py  0015_strategy_candidate_snapshots.py  0016_strategy_performance_cache.py
backend/src/quantmate_api/: __init__.py  backtest_engine.py  config.py  db.py  kis_realtime.py  main.py  market_calendar.py  market_data.py  models.py  providers.py  seed.py  strategy_engine.py  time_utils.py
backend/tests/: test_api.py  test_market_calendar.py  test_market_data.py  test_models.py  test_providers.py
docs/: 00-project-brief.md  01-initial-decisions.md  02-todo.md  03-open-questions.md  04-working-rules.md  05-references.md  06-local-setup.md  07-skills.md  08-strategy-catalog.md  09-screener-condition-map.md  10-synology-deployment.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  (+1 more)
scripts/: deploy-update.sh  dev-stop.sh  dev-up.sh  initial-enrichment.py  (+1 more)
(+29 files in other folders)
