[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "quantmate-api"
version = "0.1.0"
description = "QuantMate local API for research, screening, backtesting, and paper trading."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.37.0,<0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "ruff>=0.14.0,<0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantmate_api"]

[tool.ruff]
line-length = 100
target-version = "py313"
