[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "quantmate-api"
version = "0.1.0"
description = "QuantMate local API for research, screening, backtesting, and paper trading."
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.17.0,<1.18.0",
    "fastapi>=0.128.0,<0.129.0",
    "pymysql>=1.1.0,<1.2.0",
    "sqlalchemy>=2.0.0,<2.1.0",
    "uvicorn[standard]>=0.37.0,<0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "ruff>=0.14.0,<0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantmate_api"]

[tool.ruff]
line-length = 100
target-version = "py313"
